FIx r112907. Should have been the other way around.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112948 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/translatewiki/Pywikipedia/Pywikipedia.yaml
+++ b/translatewiki/Pywikipedia/Pywikipedia.yaml
@@ -8,8 +8,8 @@ TEMPLATE:
     class: PythonSingleFFS
     # Pywikipediabot works on language code, so mapping fallbacked to Wikimedia code.
     codeMap:
-      als: gsw
       gan-hant: gan
+      gsw: als
       hif-latn: hif
       ike-cans: iu
       kbd-cyrl: kbd
