map be-tarask to be-x-old
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@112974 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/translatewiki/Pywikipedia/Pywikipedia.yaml
+++ b/translatewiki/Pywikipedia/Pywikipedia.yaml
@@ -8,6 +8,7 @@ TEMPLATE:
     class: PythonSingleFFS
     # Pywikipediabot works on language code, so mapping fallbacked to Wikimedia code.
     codeMap:
+      be-tarask: be-x-old
       gan-hant: gan
       gsw: als
       hif-latn: hif
